# babelink

./: .gitignore  README.md  package.json
desktop/: package.json
desktop/src-tauri/: Cargo.toml
desktop/src-tauri/src/: main.rs
desktop/src/components/: CaptureFrame.tsx
desktop/src/lib/: supabase.ts
desktop/src/pages/: index.tsx
supabase/migrations/: 001_initial_schema.sql
