[package]
name = "babelink-desktop"
version = "1.0.0"
description = "Babelink Desktop - Cross-platform screen capture, translation, and text-to-speech app"
authors = ["Marseau <marseaufranco@gmail.com>"]
license = "MIT"
repository = "https://github.com/Marseau/babelink"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = [
    "api-all",
    "shell-open",
    "system-tray",
    "notification-all",
    "window-all",
    "fs-all",
    "os-all",
    "process-all",
    "global-shortcut-all"
] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
image = "0.24"
screenshots = "0.6"

# Platform-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "wingdi"] }

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.19"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]